fixed z-index in header, zeroed paddings and margins, added attribute in function

--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -1,5 +1,4 @@
 .digits {
   padding-top: 100px;
-  padding-bottom: 100px;
   margin: 0 auto;
 }
