--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -4,6 +4,6 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: 2;
+  z-index: 7;
   object-fit: cover;
 }
