--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -7,4 +7,5 @@
   max-width: 730px;
   width: 100%;
   align-self: center;
+  z-index: 13;
 }
