--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
+  height: 100vh;
   min-height: 600px;
-  max-height: 756px;
   background-color: #f2f2f2;
   position: relative;
   display: flex;
