--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -1,9 +1,8 @@
 .khan__quote {
   width: 790px;
-  margin-bottom: 36px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0;
+  margin: 0 0 36px;
   padding: 0;
 }
