--- a/blocks/table/_theme/table_theme_dark.css
+++ b/blocks/table/_theme/table_theme_dark.css
@@ -1,3 +1,1 @@
-.table_theme_dark {
-  margin-bottom: 80px;
-}
+
