--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,7 +1,6 @@
 .video__iframes {
   padding-top: 50px;
-  margin-bottom: -60px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 0 auto -60px;
 }
